--- a/css/styles.css
+++ b/css/styles.css
@@ -26,17 +26,17 @@ a, button {
 
 html, body {
 	width: 100%;
+	height: 100%;
 	color: #2d3c49;
 	font-family: sans-serif;
-;
 }
 
 header {
 	display: flex;
-	flex-grow: ;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	align-items: center;
+	justify-content: space-between;
 }
 
 h1 {
@@ -49,32 +49,33 @@ h1, h2 {
 }
 
 hr {
-	border-top: 2px solid #7d97ad;
+	border-top: 1px solid #7d97ad;
+	position: absolute;
+	left: 14.85vw;
+	width: 69.9%;
 }
 
 
 /*Classes*/
 
 .container {
-	width: 80%;
+	width: 70%;
+	height: 100%;
 	margin: auto;
-}
-
-.logo{
-	width: 10%;
+	padding: 30px;
+	box-shadow: 3px 3px 9px 5px #ccc;
+	margin-bottom: 15vw;
+	margin-top: 7px;
 }
 
 .logo img {
 	width: 75px;
 	border-radius: 50%;
 	display: block;
-	margin: auto;
 }
 
 .title{
-	width: 90%;
 	text-align: right;
-	align-self: flex-end;
 }
 
 
