--- a/css/styles.css
+++ b/css/styles.css
@@ -32,50 +32,43 @@ html, body {
 }
 
 header {
+	height: 50vh;
 	display: flex;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	flex-flow: column nowrap;
+	justify-content: flex-end;
 	align-items: center;
-	justify-content: space-between;
+	margin-bottom: 10px;
 }
 
-h1 {
-	font-family: 'Raleway', sans-serif;
-	font-size: 55px;
-}
-
-h1, h2 {
+h1, h4 {
 	font-weight: normal;
 }
 
 hr {
 	border-top: 1px solid #7d97ad;
-	position: absolute;
-	left: 14.85vw;
-	width: 69.9%;
+	width: 100%;
 }
 
 
 /*Classes*/
 
 .container {
-	width: 70%;
+	width: 100%;
 	height: 100%;
+	padding: 0 10px 0 10px;
+
+/*	width: 97%;
 	margin: auto;
-	padding: 30px;
-	box-shadow: 3px 3px 9px 5px #ccc;
-	margin-bottom: 15vw;
-	margin-top: 7px;
-}
+	box-shadow: 1px 1px 3px 2px #ccc;
+*/}
 
 .logo img {
 	width: 75px;
 	border-radius: 50%;
-	display: block;
 }
 
 .title{
-	text-align: right;
+	text-align: center;
 }
 
 
