--- a/css/styles.css
+++ b/css/styles.css
@@ -40,13 +40,26 @@ header {
 	margin-bottom: 10px;
 }
 
-h1, h4 {
+h1, h2, h4 {
 	font-weight: normal;
+}
+
+h2{
+	font-size: 25px;
+	text-align: center;
+	margin: 10px;
 }
 
 hr {
 	border-top: 1px solid #7d97ad;
 	width: 100%;
+	margin-bottom: 20px;
+}
+
+main{
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
 }
 
 
@@ -56,11 +69,7 @@ hr {
 	width: 100%;
 	height: 100%;
 	padding: 0 10px 0 10px;
-
-/*	width: 97%;
-	margin: auto;
-	box-shadow: 1px 1px 3px 2px #ccc;
-*/}
+}
 
 .logo img {
 	width: 75px;
@@ -71,11 +80,22 @@ hr {
 	text-align: center;
 }
 
-
+.heading{
+	width: 100%;
+	display: flex;
+	flex-wrap: nowrap;
+	align-items: center;
+}
 
 /*IDs*/
 
+#quote{
+	width: 95%;
+}
 
-
+#ft-work{
+	width: 100%;
+}
 
 /*Media Queries*/
+
