Add media query for below 360px
bug fix: icons in footer where wrapping to second line

--- a/css/styles.css
+++ b/css/styles.css
@@ -172,3 +172,13 @@ footer {
 }
 
 /*Media Queries*/
+
+@media screen and (max-width: 359px) {
+	.container-1 {
+		width: 100%;
+	}
+	.social {
+		max-width: 25px;
+		max-height: 25px;
+	}
+}
