--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ footer {
 	right: 45px;
 }
 
+
 /*Media Queries*/
 
 @media screen and (max-width: 359px) {
@@ -180,5 +181,35 @@ footer {
 	.social {
 		max-width: 25px;
 		max-height: 25px;
+	}
+}
+
+@media screen and (min-width: 460px) {
+	.logo img {
+		width: 100px;
+		margin-bottom: 10px;
+	}
+
+	.title {
+		margin-bottom: 10px;
+	}
+
+	h1 {
+		font-size: 2.2em;
+	}
+	h4 {
+		font-size: 1.2em;
+	}
+
+	h2 {
+		font-size: 30px;
+	}
+
+	section p {
+		font-size: 25px;
+	}
+
+	#review {
+		right: 52px;
 	}
 }
