--- a/css/styles.css
+++ b/css/styles.css
@@ -247,3 +247,88 @@ footer {
 		right: 58px;
 	}
 }
+
+@media screen and (min-width: 700px) {
+	header {
+		background-color: #6A1B9A;
+	}
+
+	.logo img {
+		width: 180px;
+		position: relative;
+		right: 30vw;
+	}
+
+	.title {
+		align-self: flex-end;
+		position: relative;
+		right: 5vw;
+		text-align: right;
+	}
+
+	h1 {
+		font-size: 3.3em;
+	}
+
+	h4{
+		font-size: 1.9em;
+	}
+
+	#ft-work {
+		padding: 0 10px 0 10px;
+	}
+
+	h2 {
+		font-size: 2.4em;
+	}
+
+	#quote {
+		width: 630px;
+	}
+
+	#ft-work {
+		width: 100%;
+		flex-flow: row wrap;
+	}
+
+	.heading {
+		width: 100%;
+		margin-bottom: 10px;
+	}
+
+	.work {
+		width: 50%;
+	}
+
+	section {
+		flex-flow: column nowrap;
+		align-items: flex-start;
+		margin-top: 10px;
+	}
+
+	section > img {
+		width: 95%;
+		height: 200px;
+		border-radius: ;
+		transform: skew(-6deg);
+	}
+
+	section > hr {
+		width: 70%;
+		height: 1px;
+		border-top: 1px solid #7d97ad;
+		border-left: 0;
+		align-self: flex-start;
+		margin: 20px 0 15px 0;
+	}
+
+	section > p {
+		transform: rotate(0);
+		text-align: left;
+	}
+
+	#memory, #arcade, #reader, #review {
+		left: 0;
+		right: 0;
+	} 
+}
