--- a/css/styles.css
+++ b/css/styles.css
@@ -26,15 +26,7 @@ html, body {
 }
 
 header {
-	height: 55vh;
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: flex-end;
-	align-items: center;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
 	background-color: #455A64;
-	color: white;
 }
 
 h1, h2, h4 {
@@ -68,7 +60,7 @@ section {
 	align-items: center;
 }
 
-section > img {
+.work {
 	width: 80%;
 	height: 100%;
 	border-radius: 50px 0;
@@ -105,6 +97,17 @@ footer {
 	box-shadow: 2px 2px 3px 5px #ccc;
 }
 
+.container-1 {
+	height: 55vh;
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: flex-end;
+	align-items: center;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	color: white;
+}
+
 .logo img {
 	width: 85px;
 	border-radius: 50%;
@@ -122,7 +125,7 @@ footer {
 	align-items: center;
 }
 
-.container-1 {
+.container-2 {
 	width: 32vw;
 	display: flex;
 	flex-flow: row wrap;
@@ -176,7 +179,7 @@ footer {
 /*Media Queries*/
 
 @media screen and (max-width: 359px) {
-	.container-1 {
+	.container-2 {
 		width: 100%;
 	}
 	.social {
@@ -264,6 +267,8 @@ footer {
 		position: relative;
 		right: 5vw;
 		text-align: right;
+		font-family: 'Montserrat', sans-serif;
+
 	}
 
 	h1 {
@@ -274,42 +279,35 @@ footer {
 		font-size: 1.9em;
 	}
 
+	#quote {
+		width: 700px;
+	}
+
 	#ft-work {
 		padding: 0 10px 0 10px;
-	}
-
-	h2 {
-		font-size: 2.4em;
-	}
-
-	#quote {
-		width: 630px;
-	}
-
-	#ft-work {
 		width: 100%;
 		flex-flow: row wrap;
 	}
 
 	.heading {
 		width: 100%;
-		margin-bottom: 10px;
+		margin-bottom: 35px;
 	}
 
-	.work {
-		width: 50%;
+	h2 {
+		font-size: 2.4em;
 	}
 
 	section {
+		width: 50%;
 		flex-flow: column nowrap;
 		align-items: flex-start;
 		margin-top: 10px;
 	}
 
-	section > img {
+	.work {
 		width: 95%;
-		height: 200px;
-		border-radius: ;
+		height: 230px;
 		transform: skew(-6deg);
 	}
 
@@ -330,5 +328,89 @@ footer {
 	#memory, #arcade, #reader, #review {
 		left: 0;
 		right: 0;
-	} 
+	}
+
+	.copyright {
+		font-size: 3vw;
+	}
+}
+
+@media screen and (min-width: 1000px) {
+	header {
+		background-color: #2C3D44;
+	}
+
+	.container-1 {
+		width: 90vw;
+		margin:auto;
+		height: auto;
+		padding-bottom: 0;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.logo img {
+		width: 100px;
+		margin: 0;
+		left: 0;
+		right: 0;
+		padding: 10px;
+	}
+
+	.title {
+		align-self: center;
+		margin: 0;
+		right: 0;
+	}
+
+	h1 {
+		font-size: 2.5em;
+	}
+
+	h4{
+		font-size: 1.3em;
+	}
+
+	.container {
+		width: 90vw;
+		margin: auto;
+		box-shadow: 0 0 0 0;
+		padding: 0;
+	}
+
+	article {
+		align-self: flex-end;
+	}
+
+	#quote {
+		width: 850px;
+	}
+
+	div > hr {
+		display: none;
+	}
+
+	h2 {
+		margin-left: 0;
+	}
+
+	section {
+		width: 33.33%;
+	}
+
+	.work {
+		border-radius: 0;
+		transform: skew(0);
+		box-shadow: 2px 2px 7px 4px #ccc;
+	}
+
+	footer {
+		width: 90vw;
+		margin: auto;
+	}
+
+	.copyright {
+		font-size: 2.5vw;
+	}
 }
