--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ footer {
 }
 
 .container-2 {
-	width: 32vw;
+	width: 50vw;
 	display: flex;
 	flex-flow: row wrap;
 	margin: 10px;
@@ -146,6 +146,8 @@ footer {
 }
 
 .copyright {
+	width: 100%;
+	text-align: right;
 	font-size: 4vw;
 	color: #B3B3B3;
 }
