--- a/css/styles.css
+++ b/css/styles.css
@@ -416,3 +416,14 @@ footer {
 		font-size: 2.5vw;
 	}
 }
+
+@media screen and (min-width: 1200px) {
+	.container, .container-1, .container-2 {
+		width: 1100px;
+		margin: auto;
+	}
+
+	#arcade {
+		width :90%;
+	}
+}
