--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,14 @@ h1, h2, h4 {
 	font-weight: normal;
 }
 
+h1 {
+	font-size: 2.3em;
+}
+
+h4 {
+	font-size: 1.15em;
+}
+
 h2 {
 	font-size: 25px;
 	text-align: center;
@@ -103,13 +111,17 @@ footer {
 	flex-flow: column nowrap;
 	justify-content: flex-end;
 	align-items: center;
-	padding-bottom: 10px;
+	padding-bottom: 20px;
 	margin-bottom: 10px;
 	color: white;
 }
 
+.logo {
+	padding-bottom: 7px;
+}
+
 .logo img {
-	width: 85px;
+	width: 120px;
 	border-radius: 50%;
 }
 
