--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,11 @@
 	box-sizing: border-box;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 img, embed, video, object {
 	max-width: 100%;
 }
@@ -64,11 +69,14 @@ main {
 section {
 	margin-top: 30px;
 	margin-bottom: 40px;
+}
+
+section a {
 	display: flex;
 	align-items: center;
 }
 
-section > p {
+section p {
 	transform: rotate(90deg);
 	text-align: center;
 	font-family: 'Niramit', sans-serif;
@@ -77,7 +85,7 @@ section > p {
 	position: relative;
 }
 
-section > hr {
+section hr {
 	border-left: 1px solid #7d97ad;
 	margin-left: 10px;
 	height: 168px;
@@ -224,7 +232,7 @@ footer {
 		font-size: 30px;
 	}
 
-	section > hr {
+	section hr {
 		height: 200px;
 	}
 
@@ -253,7 +261,7 @@ footer {
 		font-size: 34px;
 	}
 
-	section > hr {
+	section hr {
 		height: 265px;
 	}
 
@@ -315,9 +323,12 @@ footer {
 
 	section {
 		width: 50%;
+		margin-top: 10px;
+	}
+
+	section a {
 		flex-flow: column nowrap;
 		align-items: flex-start;
-		margin-top: 10px;
 	}
 
 	.work {
@@ -326,7 +337,7 @@ footer {
 		transform: skew(-6deg);
 	}
 
-	section > hr {
+	section hr {
 		width: 70%;
 		height: 1px;
 		border-top: 1px solid #7d97ad;
@@ -335,7 +346,7 @@ footer {
 		margin: 20px 0 15px 0;
 	}
 
-	section > p {
+	section p {
 		transform: rotate(0);
 		text-align: left;
 	}
