--- a/css/styles.css
+++ b/css/styles.css
@@ -25,9 +25,14 @@ img, embed, video, object {
 
 html, body {
 	width: 100%;
-	height: 100%;
 	color: #2d3c49;
 	font-family: sans-serif;
+	background: linear-gradient(0deg,hsla(0,14%,97%,.8),hsla(0,14%,97%,.8)),url('../img/back[small].jpg');
+	background-position: center;
+}
+
+.container {
+	background: radial-gradient(rgba(250,250,250,0.8), transparent);
 }
 
 header {
@@ -453,8 +458,9 @@ footer {
 
 @media screen and (min-width: 1200px) {
 	.container, .container-1, .container-2 {
-		width: 1100px;
+		width: 1200px;
 		margin: auto;
+		padding: 0 50px;
 	}
 
 	#arcade {
