--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ html, body {
 
 header {
 	background-color: #455A64;
+	animation: smoothScrollUp 1s forwards;
 }
 
 header.sticky {
@@ -42,6 +43,25 @@ header.sticky {
 	top: 0;
 	width: 100%;
 	border-radius: 0 0 5px 5px;
+	animation: smoothScrollDown 1s forwards;
+}
+
+@keyframes smoothScrollDown {
+	0% {
+		transform: translateY(-40px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes smoothScrollUp {
+	0% {
+		transform: translateY(40px);
+	}
+	100% {
+		transform: translateY(0px);
+	}
 }
 
 header.sticky .container-1 {
